# sft-pipeline

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: launch.json  settings.local.json
config/: decontaminate.yaml  default.yaml  dev.yaml  prod.yaml  stage1_research.yaml  stage3_annotate.yaml  stage3_cluster.yaml  stage4_sample.yaml  stage5_inference.yaml  stage6_filter.yaml  stage6_filter_v2.yaml
docs/: requirements-and-plan.md
sanity-checks/: baseline_verifiers.py  config.example.yaml  prep_comparison.py  requirements.txt  sanity_check.py  viz_compare.py
scripts/: install_flash_kmeans.sh  llm_judge_eval.py  run_in_env.sh  setup_env.sh  slurm_annotate.sh  slurm_stage1.sh  slurm_stage3.sh  slurm_stage3_annotate.sh  slurm_stage4.sh  slurm_stage5.sh  slurm_stage6.sh  test_ray.sh
sft_pipeline/: checkpoint.py  cli.py  config.py  cost_estimator.py  ray_utils.py  storage.py
sft_pipeline/clustering/: annotator.py  clusterer.py  embedder.py  faiss_index.py
sft_pipeline/decontam/: README.md  __init__.py  eval_index.py  normalize.py
sft_pipeline/export/: jsonl_writer.py
sft_pipeline/filters/: code_verifier.py  heuristic.py  llm_judge.py  math_verifier.py  structural.py
sft_pipeline/inference/: output_parser.py  prompt_formatter.py  vllm_batch.py
sft_pipeline/stages/: decontaminate.py  stage1_collect.py  stage2_generate.py  stage3_cluster.py  stage4_sample.py  stage5_inference.py  stage6_filter.py
tests/: conftest.py
tests/integration/: test_decontaminate.py  test_decontaminate_input_stages.py  test_decontaminate_ray.py  test_decontaminate_real.py  test_end_to_end.py  test_stage6_ray.py
tests/unit/: test_checkpoint.py  test_config.py  test_output_parser.py  test_ray_utils.py  test_stage1_extract.py  test_stage6_parallel.py  test_storage.py
tests/unit/clustering/: test_clusterer_flash_kmeans.py
tests/unit/decontam/: test_eval_index.py  test_normalize.py
tests/unit/filters/: test_code_verifier.py  test_heuristic.py  test_math_verifier.py  test_structural.py
viz/: README.md  app.py  export.py  requirements.txt
viz/.streamlit/: config.toml
viz/components/: data_loader.py  filters.py  theme.py
viz/pages/: 1_Stats.py  2_Prompts.py  3_Clusters.py  4_Answers.py
vllm/: README.md  build_sif.sh  serve.sh  slurm_nginx.sh  slurm_serve.sh  slurm_serve_array.sh  slurm_serve_multi.sh
